--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
         <h2>Memory Game</h1>
     </header>
     <div class="table">
-    <!--        <div class="box1"> <h1>1</h1> </div>
-            <div class="box2"> <h1>2</h1> </div>
-            <div class="box3"> <h1>3</h1> </div>
-            <div class="box4"> <h1>4</h1> </div>
-            <div class="box5"> <h1>5</h1> </div>
-            <div class="box6"> <h1>6</h1> </div>
-            <div class="box7"> <h1>7</h1> </div>
-            <div class="box8"> <h1>8</h1> </div>
-            <div class="box9"> <h1>9</h1> </div>-->
+<!--            <div class="box1"> <div class='front' >front</div> <div class='back'>back</div> </div>
+            <div class="box2"> <div class='front' >front</div> <div class='back'>back</div> </div>
+            <div class="box3"> <div class='front' >front</div> <div class='back'>back</div> </div>
+            <div class="box4"> <div class='front' >front</div> <div class='back'>back</div> </div>
+            <div class="box5"> <div class='front' >front</div> <div class='back'>back</div> </div>
+            <div class="box6"> <div class='front' >front</div> <div class='back'>back</div> </div>
+            <div class="box7"> <div class='front' >front</div> <div class='back'>back</div> </div>
+            <div class="box8"> <div class='front' >front</div> <div class='back'>back</div> </div>
+            <div class="box9"> <div class='front' >front</div> <div class='back'>back</div> </div>
+        <div class="box9"> <div class='front' >front</div> <div class='back'>back</div> </div>
+        <div class="box9"> <div class='front' >front</div> <div class='back'>back</div> </div>
+        <div class="box9"> <div class='front' >front</div> <div class='back'>back</div> </div>-->
+        
     </div>
 
     
