--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta charset="UTF-8">
     <title>Memory Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css"
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </head>
 <body>
+    
     <header>
-        <h2>Memory Game</h1>
+        <h1>Memory Game</h1>
+        
     </header>
     <div class="table">
 <!--            <div class="box1"> <div class='front' >front</div> <div class='back'>back</div> </div>
